# parallel_parking

./: README.md
src/: ReadMe.md
src/control/stanley_controller/: CMakeLists.txt  package.xml
src/control/stanley_controller/src/: braking.py  lk_control.py  set_pos.py  stanley_stopsign.py  stanley_tracker.py  state_subsciber.py
src/perception/autoware_msgs/msg/: DetectedObject.msg
src/perception/detected_objects_visualizer/: CMakeLists.txt
src/perception/detected_objects_visualizer/include/: visualize_detected_objects.h
src/perception/detected_objects_visualizer/src/: visualize_rects.cpp  (+1 more)
src/perception/pointpillars_ros/: CMakeLists.txt  package.xml
src/planning/hybrid_path/: CMakeLists.txt  package.xml
src/planning/manual_map_builder/: CMakeLists.txt  package.xml
src/planning/path_planner/: CMakeLists.txt
src/r_gator_simulator/r_gator_description/: CMakeLists.txt  package.xml
src/r_gator_simulator/r_gator_gazebo/: CMakeLists.txt  package.xml
src/r_gator_simulator/r_gator_gazebo_tool/: CMakeLists.txt  package.xml
src/r_gator_simulator/r_gator_launch/: CMakeLists.txt  package.xml
src/r_gator_simulator/r_gator_launch/config_rviz/: r_gator_velodyne.rviz
src/r_gator_simulator/r_gator_launch/launch/: r_gator_highbay.launch  r_gator_init.launch  r_gator_sensor_info.launch
src/r_gator_simulator/rgator_model/: CMakeLists.txt  package.xml
src/r_gator_teleop/: CMakeLists.txt  package.xml
src/r_gator_teleop/src/: r_gator_teleop.cpp
src/vehicle_drivers/gem_pure_pursuit_sim/: package.xml
src/vehicle_drivers/gem_stanley_sim/: package.xml
(+57 files in other folders)
